--- a/.gitignore
+++ b/.gitignore
@@ -243,3 +243,4 @@ $RECYCLE.BIN/
 # End of https://www.gitignore.io/api/osx,linux,python,windows,pycharm,visualstudiocode
 
 samconfig.toml
+.aws-sam/
